2nd training/Community/Community/Community1/force-app/main/default/objects/Storage_Shipment__c/Storage_Shipment__c.object-meta.xml
<CustomObject>
    <description>Holds shipping transaction specific information.</description>
    <label>Storage Shipment</label>
    <nameField>
        <label>Job Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Storage Shipments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>