2nd training/Community/Community/Community1/force-app/main/default/objects/Storage_Shipment__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Storage_Shipment</relationshipName>
    <type>Lookup</type>
</CustomField>