2nd training/Community/Community/Community1/force-app/main/default/objects/Storage_Shipment__c/fields/BL_AWB_Number__c.field-meta.xml
<CustomField>
    <fullName>BL_AWB_Number__c</fullName>
    <label>BL/AWB Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>