2nd training/Community/Community/Community1/force-app/main/default/objects/Storage_Shipment__c/fields/Destination_Agent__c.field-meta.xml
<CustomField>
    <fullName>Destination_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destination Agent</label>
    <referenceTo>Agent__c</referenceTo>
    <relationshipName>Storage_Shipment</relationshipName>
    <type>Lookup</type>
</CustomField>