2nd training/Community/Community/Community1/force-app/main/default/objects/Storage_Shipment__c/fields/Enter_volume_cuft__c.field-meta.xml
<CustomField>
    <fullName>Enter_volume_cuft__c</fullName>
    <label>Enter Volume (cuft)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>