2nd training/Community/Community/Community1/force-app/main/default/objects/Storage_Shipment__c/fields/Mode__c.field-meta.xml
<CustomField>
    <fullName>Mode__c</fullName>
    <label>Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Air</fullName>
            </value>
            <value>
                <fullName>Land</fullName>
            </value>
            <value>
                <fullName>Sea</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>