2nd training/Community/Community/Community1/force-app/main/default/objects/Storage_Shipment__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Storage_Shipment</relationshipName>
    <type>Lookup</type>
</CustomField>