2nd training/Community/Community/Community1/force-app/main/default/objects/Storage_Shipment__c/fields/Origin_Agent__c.field-meta.xml
<CustomField>
    <fullName>Origin_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Origin Agent</label>
    <referenceTo>Agent__c</referenceTo>
    <relationshipLabel>Storage Shipments (Origin Agent)</relationshipLabel>
    <relationshipName>Storage_Shipment1</relationshipName>
    <type>Lookup</type>
</CustomField>