2nd training/Community/Community/Community1/force-app/main/default/objects/Storage_Shipment__c/fields/Pack_Date__c.field-meta.xml
<CustomField>
    <fullName>Pack_Date__c</fullName>
    <description>Only for outbound shipment</description>
    <label>Pack Date</label>
    <type>Date</type>
</CustomField>