2nd training/Community/Community/Community1/force-app/main/default/objects/Storage_Shipment__c/fields/Shipping_Documentation_Type__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Documentation_Type__c</fullName>
    <label>Shipping Documentation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BL</fullName>
            </value>
            <value>
                <fullName>AWB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>