2nd training/Community/Community/Community1/force-app/main/default/objects/Storage_Shipment__c/fields/Storage__c.field-meta.xml
<CustomField>
    <fullName>Storage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Storage</label>
    <referenceTo>Storage__c</referenceTo>
    <relationshipName>Storage_Shipment</relationshipName>
    <type>Lookup</type>
</CustomField>