2nd training/Community/Community/Community1/force-app/main/default/objects/Storage_Shipment__c/fields/Volume_cuft__c.field-meta.xml
<CustomField>
    <fullName>Volume_cuft__c</fullName>
    <formula>IF( ISNULL( Enter_volume_cuft__c ),  Enter_Volume_lbs__c / 6.5, Enter_volume_cuft__c)</formula>
    <label>Volume (cuft)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>