2nd training/Community/Community/Community1/force-app/main/default/objects/Storage_Shipment__c/fields/Volume_lbs__c.field-meta.xml
<CustomField>
    <fullName>Volume_lbs__c</fullName>
    <formula>IF( ISNULL(   Enter_Volume_lbs__c   ),   Enter_volume_cuft__c  * 6.5,  Enter_Volume_lbs__c )</formula>
    <label>Volume (lbs)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>