2nd training/Community/Community/Community1/force-app/main/default/objects/Storage_Shipment__c/recordTypes/InboundShipment.recordType-meta.xml
<RecordType>
    <fullName>InboundShipment</fullName>
    <active>true</active>
    <label>Inbound Shipment</label>
</RecordType>