2nd training/Community/Community/Community1/force-app/main/default/objects/Storage_Shipment__c/recordTypes/OutboundShipment.recordType-meta.xml
<RecordType>
    <fullName>OutboundShipment</fullName>
    <active>true</active>
    <label>Outbound Shipment</label>
</RecordType>